Updated recent security pub arxiv and web info. added 231.

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,6 +18,7 @@
 	pages = {to appear},
 	title = {A Controlled Experiment on the Impact of Intrusion Detection False Alarm Rate on Analyst Performance},
 	url = {http://arxiv.org/abs/2307.07023},
+	arxiv = {2307.07023},
 	year = {2023},
 }
 
@@ -83,6 +84,7 @@ pages = {264--267},
 publisher = {ACM},
 title = {{Cry Wolf: Toward an Experimentation Platform and Dataset for Human Factors in Cyber Security Analysis}},
 url = {https://arxiv.org/abs/2002.10530},
+arxiv = {2002.10530},
 year = {2020}
 }
 @misc{Roden2019a,
@@ -156,7 +158,7 @@ month = {3},
 pages = {25--40},
 publisher = {Elsevier Advanced Technology},
 title = {{How to trick the Borg: threat models against manual and automated techniques for detecting network attacks}},
-url = {https://www.sciencedirect.com/science/article/pii/S0167404818311283},
+website = {https://www.sciencedirect.com/science/article/pii/S0167404818311283},
 volume = {81},
 year = {2019}
 }
