--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,3 +1,28 @@
+@INPROCEEDINGS{Layman2025,
+  author={Layman, Lucas and Pence, Toni and Narayan, Sridhar},
+  address = {Cape Girardeau, MO, USA},
+  booktitle={Proceedings of the 2025 ACM Southeast Conference (ACMSE 2025)}, 
+  title={Topic Difficulty in a Python Data Structures Course: Student Perceptions and Performance}, 
+  year={2025},
+  volume={},
+  number={},
+  pages={to appear.},
+  keywords={data structures;CS2;mixed-methods analysis;Python},
+}
+
+@INPROCEEDINGS{Monschein2024,
+  author={Monschein, Carson and Layman, Lucas},
+  	address = {Atlanta, GA, USA},
+  booktitle={Proceedings of SoutheastCon 2024}, 
+  title={Designing, Implementing, and Evaluating a Municipal Water Quality Dashboard}, 
+  year={2024},
+  volume={},
+  number={},
+  pages={113-118},
+  keywords={Surveys;Data visualization;Water quality;Real-time systems;Stakeholders;Monitoring;dashboard;data visualization;PowerBI;water treatment monitoring},
+  doi={10.1109/SoutheastCon52093.2024.10500297}}
+
+
 @article{Layman2024,
 	author = {Lucas Layman and Ron Vetter},
 	journal = {IEEE Computer},
@@ -10,6 +35,20 @@
 
 
 
+@article{doi:10.1177/21695067231192573,
+author = {Lucas Layman and William Roden},
+title ={A Controlled Experiment on the Impact of Intrusion Detection False Alarm Rate on Analyst Performance},
+
+journal = {Proceedings of the Human Factors and Ergonomics Society Annual Meeting},
+volume = {67},
+number = {1},
+pages = {220-225},
+year = {2023},
+doi = {10.1177/21695067231192573},
+arxiv = {2307.07023},
+URL = {http://arxiv.org/abs/2307.07023}
+}
+
 @inproceedings{Layman2023,
 	author = {Lucas Layman and William Roden},
 	city = {Washington, DC, USA},
@@ -17,8 +56,7 @@
 	month = {10},
 	pages = {to appear},
 	title = {A Controlled Experiment on the Impact of Intrusion Detection False Alarm Rate on Analyst Performance},
-	url = {http://arxiv.org/abs/2307.07023},
-	arxiv = {2307.07023},
+
 	year = {2023},
 }
 
